Increased size of icons on skills

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -340,6 +340,8 @@ main section:first-child {
 
 .skill i {
     margin-right: 5px;
+    font-size: 24px;
+    vertical-align: middle;
 }
 
 /*--------------------------------------------------------------
