Fixed courses hours label translation and position

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -728,6 +728,14 @@ details[open] summary svg {
 }
 
 /*--------------------------------------------------------------
+  Component specific
+--------------------------------------------------------------*/
+
+span[data-translate-key="course_hours"] {
+    margin-left: 5px;
+}
+
+/*--------------------------------------------------------------
   Animations
 --------------------------------------------------------------*/
 .lang-transition {
