Fixed wrong label + light mode color improvement + minor finegrain adjustments

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,8 +2,8 @@
 :root {
     /* Light Theme Variables */
     --bg-primary: #D1D5DB;
-    --bg-secondary: #ececec;
-    --bg-tertiary: #f2f2f2;
+    --bg-secondary: #ffffff;
+    --bg-tertiary: #f0f3f7;
     --text-primary: #1E2433;
     --text-secondary: #374151;
 
@@ -20,6 +20,8 @@
     --accent-secondary: #6366F1;
     --accent-tertiary: #818CF8;
     --accent-opaque: #818CF84d;
+
+    --accent-complementary: #24cddc;
 
     /* Neutral Variables */
     --neutral-primary: #7f7f7f;
@@ -504,7 +506,7 @@ details[open] summary svg {
     left: 20px;
     top: 0;
     bottom: 0;
-    width: 4px;
+    width: 2px;
     background: var(--accent-secondary);
     border-radius: 2px;
 }
@@ -550,9 +552,9 @@ details[open] summary svg {
 }
 
 .timeline-title-detail {
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: 12px;
 }
 
 .timeline-title-detail::before {
@@ -566,10 +568,35 @@ details[open] summary svg {
 
 .timeline-content {
     background: var(--bg-tertiary);
-    padding: 15px;
-    border-radius: 8px;
+    padding: 25px;
+    border-radius: 12px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
     text-align: justify;
+    /* box-shadow: 0 1px 2px #0000000d; */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    border: 1px solid #e2e8f0;
+    transition: transform 0.2s ease-in-out,
+        border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.timeline-item::before {
+    transition: all 0.3s ease-in-out;
+    box-shadow: 0 0 5px var(--accent-secondary);
+    animation: pulse 2s infinite ease-in-out;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 5px rgba(123, 97, 255, 0.5);
+    }
+
+    50% {
+        box-shadow: 0 0 15px rgba(123, 97, 255, 0.7);
+    }
+
+    100% {
+        box-shadow: 0 0 5px rgba(123, 97, 255, 0.5);
+    }
 }
 
 /*--------------------------------------------------------------
@@ -884,7 +911,7 @@ body.dark-mode .main-nav .nav-menu ul li a {
 }
 
 body.dark-mode .timeline-subtitle {
-    color: var(--accent-tertiary);
+    color: var(--accent-complementary);
 }
 
 /*--------------------------------------------------------------
